--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 WebDev Insights. All rights reserved.</p>
+            <p>&copy; 2024 jemson.dev. All rights reserved.</p>
         </div>
     </footer>
 
